2007-01-26  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/geometry.c (constrain_size):
	silence gcc 4.1.1 warning.

	* libs/System.c (searchPath):
	search in pwd if no path is given.
	return NULL if a file dosn't exist regardless if it's absolute path

2007-01-26  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/placement.c (__place_window)
	(__pl_under_mouse_get_pos_simple):
	* fvwm/style.h (SUNDERMOUSE_PLACEMENT_HONORS_STARTS_ON_PAGE):
	* fvwm/fvwm.1.in:
	new style option UnderMousePlacementHonorsStartsOnPage

	* fvwm/update.c (init_style):
	don't forget stickyness when a window goes fullscreen (or when some
	other style is changed)

2007-01-25  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/placement.c (__pl_cascade_get_pos_simple):
	properly handle title direction with cascade placement

	* libs/defaults.h (PLACEMENT_FALLBACK_CASCADE_STEP):
	new default value

	* fvwm/placement.c (__pl_center_get_pos_simple):
	CenterPlacement properly handles Xinerama screens

2007-01-25  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* configure.ac:
	always substiture datarootdir

2007-01-21  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/add_window.c (GetWindowSizeHints):
	* fvwm/geometry.c (constrain_size):
	undefine macros after use
	(constrain_size):
	reindented and cleaned up
	do not grow a window because of aspect ratio if this is not explicitly
	allowed by the CS_ROUND_UP flag
	(constrain_size):
	(__cs_handle_aspect_ratio):
	broken into separate functions and cleaned up

2007-01-20  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_list.c (module_receive):
	(module_input_discard):
	allocate input data in just one call - better perfomance

2007-01-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/placement.c (__place_get_wm_pos):
	simplified to a simple loop
	(__explain_placement):
	added explanation of new placement styles

	* fvwm/placement.c (__place_get_wm_pos):
	cleanup
	(__pl_center_get_pos_simple):